--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>124124</div>
+    <div>14124</div>
+    <img src="./assets/images/webpack.png" />
   </body>
 </html>
